<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                 android:background="@color/colorHeaderDetail">
                <TextView
                    android:id="@+id/tv_titulo_original"
                    android:layout_width="match_parent"
                    android:textSize="47sp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp"
                    android:textColor="@color/colorWhite"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/tv_cartaz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/info_image_movie"
                    android:paddingEnd="40dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="40dp"
                    android:paddingStart="25dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_data_lancamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_avaliacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/bt_favorite"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:drawable/btn_star_big_off" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_sinopse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorText" />

                <TextView
                    android:id="@+id/tv_title_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_trailers"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <View
                    android:id="@+id/separator_two"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorText" />

                <TextView
                    android:id="@+id/tv_title_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/title_reviews"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</merge>